2016-08-26  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/seg.spad: Add plus and minus for SegmentCategory

2016-08-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/rdeefx.spad: Improve integration with 'erf'

2016-08-21  Ralf Hemmecke  <ralf@hemmecke.org>
            Peter Broadbery  <p.broadbery@gmail.com>

	* src/aldor/Makefile.in: add dependencies for files coming from
	Aldor source tree

	* src/aldor/initlist.as, src/aldor/Makefile,
	src/aldor/aldor/axextend.as: Generalize Matrix in Aldor interface

2016-08-19  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
	    Bill Page <bill.page@newsynthesis.org>

	* src/algebra/any.spad: Fix result of domainOf

2016-08-18  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/smith.spad: Handle empty matrices

2016-08-18  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/bezout.spad: Add wrapper for BezoutMatrix

2016-08-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/moddfact.spad: Remove unused exports

2016-08-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/util.lisp, contrib/mk_shlib.lisp:
	Add support for using FriCAS as ECL shared library

2016-08-14  Qian Yun  <oldk1331@gmail.com>

	* src/interp/i-syscmd.boot: Preserve $IOindex in ')clar all'
	if it is nil
 
2016-08-14  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/poly.spad: Remove duplicate 'exquo' from SUP

2016-08-14  Qian Yun  <oldk1331@gmail.com>

	* src/interp/msgdb.boot: Preserve space before '?'

2016-08-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/list.spad: Remove a few $Lisp calls
	src/lisp/primitives.lisp: A little optimizetion

2016-08-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/*.spad:  Rename LinearlyExplicitRingOver
	to LinearlyExplicitOver

2016-08-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/Makefile.in: Add missing dependencies

2016-08-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/matcat.spad, src/algebra/matrix.spad: